--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,14 @@
+@use "./assets/sass/variables" as *;
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
+  height: 100vh;
+  padding: 1rem;
+  border: 2px solid red;
+  font-family: $font-primary;
 }
