--- a/src/containers/NavBar/NavBar.scss
+++ b/src/containers/NavBar/NavBar.scss
@@ -1,20 +1,23 @@
+@use "../../assets/sass/variables" as *;
+
 .nav-bar {
-  border: 2px solid red;
   display: grid;
   width: 100%;
-  height: 20vh;
-  gap: 1rem;
+  height: 15vh;
   align-items: center;
   grid-template-columns: 1fr 1fr 4rem;
+  grid-template-rows: 50px 50px;
   grid-template-areas:
     "heading heading  button"
     "inputField inputField inputField";
 
   &__heading {
+    font-family: $font-heading;
     grid-area: heading;
   }
 
   &__button {
+    justify-self: end;
     grid-area: button;
   }
 
