adding to todo state working

--- a/src/components/InputField/InputField.scss
+++ b/src/components/InputField/InputField.scss
@@ -4,12 +4,12 @@
   border: $border;
   border-radius: $border-radius;
   height: 2.5rem;
-  //   padding: 0 0.3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   &__input {
+    padding: 0.5rem;
     height: 100%;
     width: 100%;
     border: unset;
@@ -17,6 +17,8 @@
   }
 
   &__icon {
+    border: unset;
+    background-color: unset;
     padding: 0 0.5rem;
   }
 }
