--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -14,7 +14,9 @@
   }
 
   &__text {
-    text-decoration: line-through;
+    &--strikethrough {
+      text-decoration: line-through;
+    }
   }
 
   &__icon {
